test/error/EnumFlagsNoValue.fu
enum* DaysOfWeek
{
	Sunday, //ERROR: enum* symbol must be assigned a value
	Monday
} //ERROR: enum* symbol must be assigned a value
